--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-basic-ide",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chennalhua.github.io/NaMi/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -12,6 +13,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
+    "gh-pages": "^4.0.0",
     "moment": "^2.29.4",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
@@ -24,7 +26,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
