--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "crypto-js": "^4.1.1",
     "gh-pages": "^4.0.0",
     "moment": "^2.29.4",
-    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.56.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
